--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mysql2": "^1.6.5"
+  },
+
+  "engines": {
+    "node": "v4.1.X",
+    "npm": "2.14.X"
   }
 }
