--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "to_do_list",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "node index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "api": "node ./src/index.js"
