--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "node ./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "api": "node ./src/index.js",
+    "api": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
