--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "to_do_list",
   "version": "0.0.0",
   "description": "",
-  "main": "node index.js",
+  "main": "node ./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "api": "node index.js"
+    "api": "node ./src/index.js",
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
