--- a/.env
+++ b/.env
@@ -1,4 +1,12 @@
-DB_HOST=localhost
-DB_USER=root
-DB_DATABASE=todo
-DB_PASS=Renkon&daikon2363
+//DB_HOST=localhost
+//DB_USER=root
+//DB_DATABASE=todo
+//DB_PASS=Renkon&daikon2363
+
+
+
+DB_HOST=us-cdbr-iron-east-02.cleardb.net
+DB_USER=bff42cacd4dbcf
+DB_DATABASE=heroku_18df9d240ad242c
+DB_PASS=04331544
+
